2014-10-15  Sylvain Chouleur  <sylvain.chouleur@gmail.com>

	* gnus-icalendar.el: Support vcal format timezones
	(gnus-icalendar-event--decode-datefield): use icalendar functions to
	compute dates with associated timezone
	(gnus-icalendar-event-from-ical): compute all timezones

2014-10-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-start.el (gnus-save-newsrc-file-check-timestamp): New option to
	check the newsrc.eld file's timestamp before saving it.
	(gnus-save-newsrc-file): Use it, with a prompt when the newsrc.eld
	timestamp has changed to be newer.

2014-10-06  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-identities):
	Include message-alternative-emails.

2014-10-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* ntlm.el (ntlm-string-make-unibyte, ntlm-secure-hash):
	New compatibility functions.
	(ntlm-build-auth-response): Use them.

2014-10-04  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* ntlm.el (ntlm-build-auth-request):
	Add NTLM2 Session support.  (Bug#15603)

2014-10-04  Alan Schmitt  <alan.schmitt@polytechnique.org>  (tiny change)

	* nnimap.el (nnimap-process-expiry-targets): Reverse the list of
	expired messages only when it was built in reverse order.

2014-10-04  Peter Münster  <pmlists@free.fr>  (tiny change)

	* gnus-delay.el (gnus-delay-send-queue): Remove `gnus-delay-header'
	last so it can be used in `message-send-hook'.

2014-09-29  Daiki Ueno  <ueno@gnu.org>

	* mml.el (mml-parse-1): Error out if unknown mode is specified in
	<#secure> tag (bug#18513).

2014-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* parse-time.el: Require cl when compiling.

2014-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	Use cl-lib as much as possible following the 2014-09-26 change
	in the Emacs trunk.
	* parse-time.el: Try requiring cl-lib.
	(parse-time-incf): Alias to cl-incf or incf.
	(digit-char-p): Remove.
	(parse-time-integer): Alias to cl-parse-integer or the one defined.
	(parse-integer): Rename to parse-time-integer.